--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,8 +35,13 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
+
     androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'android.arch.core:core-testing:1.3.1'
+    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.1"
+    androidTestImplementation "io.mockk:mockk-android:1.9"
     //DI
     implementation "org.koin:koin-android:$koin_version"
     implementation "org.koin:koin-android-viewmodel:$koin_version"
